--- a/data-analysis/data-analysis.Rmd
+++ b/data-analysis/data-analysis.Rmd
@@ -25,9 +25,9 @@ Uploaded the Airbnb data set from Kaggle via a csv file:
 abnb <- read_csv("AB_NYC_2019.csv")
 ```
 
-We are assuming that the data we have for Airbnbs in New York City represents the population given that a) there are 48,895 observations and b) we concsulted Dr. Tackett and she thinks that the data was most likely web scapped from the Airbnb website. 
+We are assuming that the data we have for Airbnbs in New York City represents the population given that a) there are 48,895 observations and b) we consulted Dr. Tackett and she thinks that the data was most likely web scapped from the Airbnb website. 
 
-Therefore, in order to perform analysis, we used created a sample set called abnb_sample of 4000 randomly selected observations.
+Therefore, in order to perform analysis, we created a sample set called abnb_sample of 4000 randomly selected observations.
 
 ```{r abnb_sample}
 set.seed(111519)
@@ -244,7 +244,7 @@ abnb_sample %>%
   labs(title = "Prices at Latitude and Longitude Coordinates", x = "Longitude", y = "Latitude", color = "Price Case")
 ```
 
-It is clear from this map, that the at the cases in which the prices are at the median or above (blue dots) are clustered around Manhattan. Therefore, visualization confirms our previous findings. The area that appears to have the second most number of blue dots is Brooklyn, which is right next to Manhattan. We use summary statistics to confirm. 
+It is clear from this map, that the cases in which the prices are at the median or above (blue dots) are clustered around Manhattan. Therefore, visualization confirms our previous findings. The area that appears to have the second most number of blue dots is Brooklyn, which is right next to Manhattan. We use summary statistics to confirm. 
 
 Relative frequency of listings that are above or at the median price by borough:
 
@@ -274,6 +274,52 @@ abnb_sample %>%
 ```
 
 It appears that the neighborhoods with the most expensive Airbnbs come from a range of boroughs. In fact, all are represented in the top 10 equally. Surprisingly, the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00. We will examine whether neighborhood has a significant influence on price by looking at an AIC selected linear model by backwards selection in the next section.
+
+### Location Factors and Price
+
+In order to look at these other factors, we will select a model AIC backwards selection.
+
+Removing NA values and creating a full model for price:
+
+```{r remove-na-price}
+abnb_model_price <- abnb_sample %>%
+  drop_na(neighbourhood,
+          neighbourhood_group,
+          latitude,
+          longitude)
+
+m_full_model_price <- lm(price ~ neighbourhood +
+          neighbourhood_group +
+          latitude +
+          longitude, data = abnb_model_price)
+```
+
+Performing model selection using AIC for availability using step function:
+
+```{r AIC-backward-selection-price, results="hide"}
+selected_model_price <- step(m_full_model_price, direction = "backward")
+```
+
+```{r selected-kable-price}
+tidy(selected_model_price) %>%
+  select(term, estimate) %>%
+  kable(format = "markdown", digits = 3)
+```
+
+The intercept for our linear model is: -57037.928
+The expected price, on average, is -$57037.93. In this case, the intercept does not have a meaningful interpretation because an Airbnb would not have a price listing of -$57037.93 per night.
+
+Determining R-squared:
+
+```{r r-square-selectedmodel-price}
+glance(selected_model_price)$r.squared
+```
+
+The R-squared value is 12.99% of the variability in price can be explained by the location of the listng - latitude, longitude, neighbourhood_group (borough), and neighbourhood.
+
+It is important to note that the only variables selected by the AIC model were neighborhoods that were significant in predicting price of the Airbnb rather than any of the original variables included (latitude, longitude, borough). 
+
+Compared to our other models, this is a relatively higher R squared value.
 
 
 ### Looking At Everything
